--- a/index.html
+++ b/index.html
@@ -3,10 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Backend en Railway</title>
+    <title>Gestión de Usuarios</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; }
+        table { width: 50%; margin: auto; border-collapse: collapse; }
+        th, td { border: 1px solid black; padding: 8px; }
+        form { margin-bottom: 20px; }
+    </style>
 </head>
 <body>
-    <h1>Servidor en Railway funcionando 🚀</h1>
-    <p>Puedes probar la API en <code>/usuarios</code></p>
+    <h1>Gestión de Usuarios</h1>
+    <form id="userForm">
+        <input type="text" id="nombre" placeholder="Nombre" required>
+        <input type="email" id="correo" placeholder="Correo" required>
+        <button type="submit">Agregar Usuario</button>
+    </form>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>Correo</th>
+            </tr>
+        </thead>
+        <tbody id="userTableBody"></tbody>
+    </table>
+
+    <script>
+        const API_URL = 'https://tu-backend.railway.app/usuarios';
+
+        document.getElementById('userForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const nombre = document.getElementById('nombre').value;
+            const correo = document.getElementById('correo').value;
+            
+            await fetch(API_URL, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ nombre, correo })
+            });
+            loadUsers();
+        });
+
+        async function loadUsers() {
+            const res = await fetch(API_URL);
+            const users = await res.json();
+            const tableBody = document.getElementById('userTableBody');
+            tableBody.innerHTML = '';
+            users.forEach(user => {
+                tableBody.innerHTML += `<tr><td>${user.id}</td><td>${user.nombre}</td><td>${user.correo}</td></tr>`;
+            });
+        }
+
+        loadUsers();
+    </script>
 </body>
 </html>
